added new feature faqUser

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -192,6 +192,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\FaqUserController.cs" />
     <Compile Include="Controllers\IntranetController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\DownloadController.cs" />
@@ -1304,6 +1305,7 @@
     <Content Include="Content\Faq\answers\a_howtoexportlicense2015.htm" />
     <Content Include="Content\Faq\answers\a_howtomovegbg6or7.htm" />
     <Content Include="Content\Faq\answers\a_index.htm" />
+    <Content Include="Content\Faq\answers\a_index_user.htm" />
     <Content Include="Content\Faq\answers\a_installgbg.htm" />
     <Content Include="Content\Faq\answers\a_installgbgamec.htm" />
     <Content Include="Content\Faq\answers\a_installtd2015.htm" />
@@ -1347,6 +1349,7 @@
     <Content Include="Content\Faq\answers\t_all.htm" />
     <Content Include="Content\Faq\answers\t_genginers.htm" />
     <Content Include="Content\Faq\answers\t_index.htm" />
+    <Content Include="Content\Faq\answers\t_index_user.htm" />
     <Content Include="Content\Faq\answers\t_prices.htm" />
     <Content Include="Content\Faq\answers\t_tddraftvstdbasevstdeng.htm" />
     <Content Include="Content\Faq\answers\t_tdengplusvstfree.htm" />
@@ -1652,7 +1655,9 @@
     <Content Include="Content\Faq\js\chartist.min.js" />
     <Content Include="Content\Faq\js\datasets.js" />
     <Content Include="Content\Faq\js\datasetsindex.js" />
+    <Content Include="Content\Faq\js\datasetsindex_user.js" />
     <Content Include="Content\Faq\js\index.js" />
+    <Content Include="Content\Faq\js\index_user.js" />
     <Content Include="Content\Faq\js\jquery-2.1.1.js" />
     <Content Include="Content\Faq\js\jquery.mobile.custom.min.js" />
     <Content Include="Content\Faq\js\main.js" />
@@ -2589,6 +2594,8 @@
     </Content>
     <Content Include="Views\Intranet\Index.cshtml" />
     <Content Include="Views\Intranet\SingleErpRow.cshtml" />
+    <Content Include="Views\FaqUser\Index.cshtml" />
+    <Content Include="Views\FaqUser\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
