added a new answer (selfexport) to user & var guide book

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1289,6 +1289,7 @@
     <Content Include="Content\Faq\answers\a_eolmodules.htm" />
     <Content Include="Content\Faq\answers\a_errorsentinelinstaller.htm" />
     <Content Include="Content\Faq\answers\a_errortteam.htm" />
+    <Content Include="Content\Faq\answers\a_selfserviceexport.htm" />
     <Content Include="Content\Faq\answers\a_exportlicense2014.htm" />
     <Content Include="Content\Faq\answers\a_exportlicense2015.htm" />
     <Content Include="Content\Faq\answers\a_floatinglicenses2014.htm" />
@@ -1380,6 +1381,9 @@
     <Content Include="Content\Faq\img\DLL_registration.png" />
     <Content Include="Content\Faq\img\Error_Sentinel_Installer.jpg" />
     <Content Include="Content\Faq\img\Error_TTeam.jpg" />
+    <Content Include="Content\Faq\img\ExportDPT3Care_1.png" />
+    <Content Include="Content\Faq\img\ExportDPT3Care_2.png" />
+    <Content Include="Content\Faq\img\ExportDPT3Care_3.png" />
     <Content Include="Content\Faq\img\FAQ_Windows_settings.png" />
     <Content Include="Content\Faq\img\flags\Afghanistan.png" />
     <Content Include="Content\Faq\img\flags\African Union.png" />
