td 2016 beta + no remember me

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1676,6 +1676,7 @@
     <Content Include="Content\Faq\Lab\Please\please.htm" />
     <Content Include="Content\Faq\Lab\Please\prova.htm" />
     <Content Include="Content\Faq\Lab\ProvaFrame.htm" />
+    <Content Include="Content\images\TD2016_download.png" />
     <Content Include="Content\images\TDProf_timeline.png" />
     <Content Include="Content\images\ThinkDesign2015_SP3_download.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
