new feature: all peoples where you can also modify the role

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\FaqUserController.cs" />
+    <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\IntranetController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\DownloadController.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PeopleModels.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ErpModels.cs" />
     <Compile Include="Models\CompanyModels.cs" />
@@ -2601,6 +2603,8 @@
     <Content Include="Views\Intranet\SingleErpRow.cshtml" />
     <Content Include="Views\FaqUser\Index.cshtml" />
     <Content Include="Views\FaqUser\Index2.cshtml" />
+    <Content Include="Views\People\Index.cshtml" />
+    <Content Include="Views\People\SingleRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
