added new feature: can modify the company info

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -2604,7 +2604,8 @@
     <Content Include="Views\FaqUser\Index.cshtml" />
     <Content Include="Views\FaqUser\Index2.cshtml" />
     <Content Include="Views\People\Index.cshtml" />
-    <Content Include="Views\People\SingleRow.cshtml" />
+    <Content Include="Views\People\SinglePeopleRow.cshtml" />
+    <Content Include="Views\Company\SingleCompanyRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
