--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -192,6 +192,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\FaqUserController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\IntranetController.cs" />
@@ -208,6 +209,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\OrdersModels.cs" />
     <Compile Include="Models\PeopleModels.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ErpModels.cs" />
@@ -2606,6 +2608,7 @@
     <Content Include="Views\People\Index.cshtml" />
     <Content Include="Views\People\SinglePeopleRow.cshtml" />
     <Content Include="Views\Company\SingleCompanyRow.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
