added new feature: edit single license row,
added japan ftp download link

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -209,7 +209,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\OrdersModels.cs" />
+    <Compile Include="Models\OrderModels.cs" />
     <Compile Include="Models\PeopleModels.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ErpModels.cs" />
@@ -2609,6 +2609,7 @@
     <Content Include="Views\People\SinglePeopleRow.cshtml" />
     <Content Include="Views\Company\SingleCompanyRow.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\License\SingleLicenseRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
