added korean localization

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -221,6 +221,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.it-IT.resx</DependentUpon>
     </Compile>
+    <Compile Include="Localization\Resource.ko-KR.Designer.cs">
+      <DependentUpon>Resource.ko-KR.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Localization\Resource.ja-JP.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -2662,6 +2667,10 @@
     <EmbeddedResource Include="Localization\Resource.it-IT.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.it-IT.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Localization\Resource.ko-KR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.ko-KR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Localization\Resource.ja-JP.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
