faq tdviewer light

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1361,6 +1361,7 @@
     <Content Include="Content\Faq\answers\a_tdrunningslow.htm" />
     <Content Include="Content\Faq\answers\a_tdstylingvstdprof.htm" />
     <Content Include="Content\Faq\answers\a_tdsuite.htm" />
+    <Content Include="Content\Faq\answers\a_tdviewer.htm" />
     <Content Include="Content\Faq\answers\a_thinkcompusers.htm" />
     <Content Include="Content\Faq\answers\a_thinkstart.htm" />
     <Content Include="Content\Faq\answers\a_trycampaign.htm" />
