added download for 2016

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1297,6 +1297,8 @@
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\Subdivision_Solid_3-3Original.html" />
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\Subdivision_Solid_3-3_controller.swf" />
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\swfobject.js" />
+    <Content Include="Content\eLearning\JA\3DCADTest.png" />
+    <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.png" />
     <Content Include="Content\Faq\answers\a_all.htm" />
     <Content Include="Content\Faq\answers\a_appinconflicttd.htm" />
     <Content Include="Content\Faq\answers\a_beforereinstalling.htm" />
@@ -1704,6 +1706,7 @@
     <Content Include="Content\Faq\Lab\Please\prova.htm" />
     <Content Include="Content\Faq\Lab\ProvaFrame.htm" />
     <Content Include="Content\images\TD2016_beta_download.png" />
+    <Content Include="Content\images\TD2016_download.png" />
     <Content Include="Content\images\TDProf_timeline.png" />
     <Content Include="Content\images\ThinkDesign2015_SP3_download.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
@@ -2514,6 +2517,10 @@
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling.zip" />
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling_2014.1.pdf" />
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling_2014.1.zip" />
+    <Content Include="Content\eLearning\JA\3DCADTest.pdf" />
+    <Content Include="Content\eLearning\JA\3DCADTest.zip" />
+    <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.pdf" />
+    <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.zip" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
