modified e-learning and minor requests from japan team

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1301,6 +1301,10 @@
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\swfobject.js" />
     <Content Include="Content\eLearning\JA\3DCADTest.png" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.png" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2013.png" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2014.png" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2015.png" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2016.png" />
     <Content Include="Content\Faq\answers_user_jp\a_all.htm" />
     <Content Include="Content\Faq\answers_user_jp\a_appinconflicttd.htm" />
     <Content Include="Content\Faq\answers_user_jp\a_beforereinstalling.htm" />
@@ -2791,6 +2795,9 @@
     <Content Include="Content\eLearning\JA\3DCADTest.zip" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.pdf" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.zip" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2015.2SP3.pdf" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2016.pdf" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2016.zip" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
