resolved issues on case management feature

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -2926,6 +2926,7 @@
     <Content Include="Views\Case\Success.cshtml" />
     <Content Include="Views\Case\NewCaseHistoryRow.cshtml" />
     <Content Include="Views\Case\CaseHistories.cshtml" />
+    <Content Include="Views\Case\ModifyCaseRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
