--- a/DPTnew/DPTnew/Web.config
+++ b/DPTnew/DPTnew/Web.config
@@ -39,7 +39,7 @@
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
       </assemblies>
     </compilation>
-    <httpRuntime requestValidationMode="2.0" targetFramework="4.5" maxRequestLength="1048576" executionTimeout="3600"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576" executionTimeout="3600"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
