added new button for admin update product list

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23283,6 +23283,7 @@
     <Content Include="Views\Case\CaseHistories.cshtml" />
     <Content Include="Views\Case\ModifyCaseRow.cshtml" />
     <Content Include="Views\Help\Index.cshtml" />
+    <Content Include="Views\Company\UpdateProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
