minor fixes on case management

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23284,6 +23284,7 @@
     <Content Include="Views\Case\ModifyCaseRow.cshtml" />
     <Content Include="Views\Help\Index.cshtml" />
     <Content Include="Views\Company\UpdateProductList.cshtml" />
+    <Content Include="Views\Order\NewOrderRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
