--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23153,6 +23153,7 @@
     <Content Include="Content\Help\web.config" />
     <Content Include="Content\Help\___dtree.CISTOLAVORANDO" />
     <Content Include="Content\Help\___dtree.jsbrisa" />
+    <Content Include="Content\eLearning\JA\SmartObjects_2015.2.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
