updated some japanese eLearning file

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -1300,7 +1300,6 @@
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\Subdivision_Solid_3-3Original.html" />
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\Subdivision_Solid_3-3_controller.swf" />
     <Content Include="Content\eLearning\IT\_Subdivision _solid\Subdivision_Solid_3-3\swfobject.js" />
-    <Content Include="Content\eLearning\JA\3DCADTest.png" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.png" />
     <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2013.png" />
     <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2014.png" />
@@ -22110,8 +22109,6 @@
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling.zip" />
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling_2014.1.pdf" />
     <Content Include="Content\eLearning\JA\ZoneModeling\ZoneModeling_2014.1.zip" />
-    <Content Include="Content\eLearning\JA\3DCADTest.pdf" />
-    <Content Include="Content\eLearning\JA\3DCADTest.zip" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.pdf" />
     <Content Include="Content\eLearning\JA\3DCADTest\3DCADTest.zip" />
     <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2015.2SP3.pdf" />
@@ -23153,7 +23150,7 @@
     <Content Include="Content\Help\web.config" />
     <Content Include="Content\Help\___dtree.CISTOLAVORANDO" />
     <Content Include="Content\Help\___dtree.jsbrisa" />
-    <Content Include="Content\eLearning\JA\SmartObjects_2015.2.pdf" />
+    <Content Include="Content\eLearning\JA\SmartObjects\SmartObjects_2015.2.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
