added new feature: add new license

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23288,6 +23288,7 @@
     <Content Include="Views\Help\Index.cshtml" />
     <Content Include="Views\Company\UpdateProductList.cshtml" />
     <Content Include="Views\Order\NewOrderRow.cshtml" />
+    <Content Include="Views\License\AddLicenseRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
