--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Controllers\SafenetController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
+    <Compile Include="Filters\PrePostFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
