--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -258,6 +258,7 @@
     <Content Include="App_Data\ProductList.txt" />
     <Content Include="calcx.dll" />
     <Content Include="clgen.dll" />
+    <Content Include="Scripts\jquery-1.12.3.js" />
     <Content Include="Content\buttons.dataTables.min.css" />
     <Content Include="Content\datatables.min.css" />
     <Content Include="Content\eLearning\css\style.css" />
