added french language localization

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -214,6 +214,11 @@
     </Compile>
     <Compile Include="Helper\CultureHelper.cs" />
     <Compile Include="Helper\LocalizationHelper.cs" />
+    <Compile Include="Localization\Resource.fr-FR.Designer.cs">
+      <DependentUpon>Resource.fr-FR.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Localization\Resource.de-DE.Designer.cs">
       <DependentUpon>Resource.de-DE.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -23323,6 +23328,10 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Localization\Resource.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Localization\Resource.de-DE.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.de-DE.Designer.cs</LastGenOutput>
