minor fixes on case management and approved button on orders

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23296,6 +23296,8 @@
     <Content Include="Views\Company\UpdateProductList.cshtml" />
     <Content Include="Views\Order\NewOrderRow.cshtml" />
     <Content Include="Views\License\AddLicenseRow.cshtml" />
+    <Content Include="Views\Order\Success.cshtml" />
+    <Content Include="Views\Order\ApproveOrderRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
