--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23163,6 +23163,7 @@
     <Content Include="Content\Help\___dtree.CISTOLAVORANDO" />
     <Content Include="Content\Help\___dtree.jsbrisa" />
     <Content Include="Content\eLearning\JA\SmartObjects\SmartObjects_2015.2.pdf" />
+    <Content Include="Content\Letter_template_thinkcompusers.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
