new feature: case archive

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -193,6 +193,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CaseHistoryController.cs" />
     <Compile Include="Controllers\CaseController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
@@ -23299,6 +23300,8 @@
     <Content Include="Views\License\AddLicenseRow.cshtml" />
     <Content Include="Views\Order\Success.cshtml" />
     <Content Include="Views\Order\ApproveOrderRow.cshtml" />
+    <Content Include="Views\Order\OrderRows.cshtml" />
+    <Content Include="Views\CaseHistory\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
