added the structure for internos

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -196,10 +196,11 @@
     <Compile Include="Controllers\CaseHistoryController.cs" />
     <Compile Include="Controllers\CaseController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
+    <Compile Include="Controllers\InternosController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\FaqUserController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
-    <Compile Include="Controllers\IntranetController.cs" />
+    <Compile Include="Controllers\ActivityController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\DownloadController.cs" />
     <Compile Include="Controllers\eLearningController.cs" />
@@ -23290,8 +23291,8 @@
     <Content Include="Views\eLearning\Index_jp.cshtml">
       <SubType>Code</SubType>
     </Content>
-    <Content Include="Views\Intranet\Index.cshtml" />
-    <Content Include="Views\Intranet\SingleErpRow.cshtml" />
+    <Content Include="Views\Activity\Index.cshtml" />
+    <Content Include="Views\Activity\SingleErpRow.cshtml" />
     <Content Include="Views\FaqUser\Index.cshtml" />
     <Content Include="Views\FaqUser\Index2.cshtml" />
     <Content Include="Views\People\Index.cshtml" />
@@ -23317,6 +23318,7 @@
     <Content Include="Views\Order\ApproveOrderRow.cshtml" />
     <Content Include="Views\Order\OrderRows.cshtml" />
     <Content Include="Views\CaseHistory\Index.cshtml" />
+    <Content Include="Views\Internos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
