back up of 20/01

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -280,6 +280,7 @@
     <Content Include="Content\Faq\img\1.4_Inserting_cases.png" />
     <Content Include="Content\Faq\img\1.5_Inserting_cases.png" />
     <Content Include="Content\Faq\img\1.6_Inserting_cases.png" />
+    <Content Include="Content\Faq\img\TDProf_timeline2017_sitoDPT3Care.png" />
     <Content Include="Content\images\TDProf_timeline2017_sitoDPT3Care.png" />
     <Content Include="Scripts\jquery-1.12.3.js" />
     <Content Include="Content\buttons.dataTables.min.css" />
