--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -273,8 +273,10 @@
     <Content Include="calcx.dll" />
     <Content Include="clgen.dll" />
     <Content Include="Content\Faq\answers\a_howtoinsertnewcase.htm" />
+    <Content Include="Content\Faq\answers\a_licenseid&amp;accountstatus.htm" />
     <Content Include="Content\Faq\answers\Tteam.png" />
     <Content Include="Content\Faq\answers_jp\a_howtoinsertnewcase.htm" />
+    <Content Include="Content\Faq\answers_jp\a_licenseid&amp;accountstatus.htm" />
     <Content Include="Content\Faq\answers_user\a_howtoinsertnewcase.htm" />
     <Content Include="Content\Faq\answers_user_jp\a_howtoinsertnewcase.htm" />
     <Content Include="Content\Faq\img\1.1_Inserting_cases.png" />
