--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -273,9 +273,11 @@
     <Content Include="calcx.dll" />
     <Content Include="clgen.dll" />
     <Content Include="Content\Faq\answers\a_howtoinsertnewcase.htm" />
+    <Content Include="Content\Faq\answers\a_initiativezero.htm" />
     <Content Include="Content\Faq\answers\a_licenseid&amp;accountstatus.htm" />
     <Content Include="Content\Faq\answers\Tteam.png" />
     <Content Include="Content\Faq\answers_jp\a_howtoinsertnewcase.htm" />
+    <Content Include="Content\Faq\answers_jp\a_initiativezero.htm" />
     <Content Include="Content\Faq\answers_jp\a_licenseid&amp;accountstatus.htm" />
     <Content Include="Content\Faq\answers_user\a_howtoinsertnewcase.htm" />
     <Content Include="Content\Faq\answers_user_jp\a_howtoinsertnewcase.htm" />
@@ -23188,6 +23190,14 @@
     <Content Include="Content\Help\___dtree.jsbrisa" />
     <Content Include="Content\eLearning\JA\SmartObjects\SmartObjects_2015.2.pdf" />
     <Content Include="Content\Letter_template_thinkcompusers.pdf" />
+    <Content Include="Content\Faq\docs\TD2016_requirements_en.pdf" />
+    <Content Include="Content\Faq\docs\TD2016_requisiti_it.pdf" />
+    <Content Include="Content\Faq\docs\Fasi_IniziativaZero.pdf" />
+    <Content Include="Content\Faq\docs\InitiativeZero_steps.pdf" />
+    <Content Include="Content\Faq\docs\Documento_adesione_IniziativaZero.pdf" />
+    <Content Include="Content\Faq\docs\Template_Autocertificazione.pdf" />
+    <Content Include="Content\Faq\docs\Self-certification_template.pdf" />
+    <Content Include="Content\Faq\docs\Application_form_InitiativeZero.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
