Iniziativa zero & table for Segment-Industry

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Models\ErpModels.cs" />
     <Compile Include="Models\CompanyModels.cs" />
     <Compile Include="Models\ExtensionMethods.cs" />
+    <Compile Include="Models\SegmentIndustryModels.cs" />
     <Compile Include="Models\SalesRepModels.cs" />
     <Compile Include="Models\DptContext.cs" />
     <Compile Include="Models\LicenseModels.cs" />
@@ -23336,6 +23337,8 @@
     <Content Include="Views\Order\OrderRows.cshtml" />
     <Content Include="Views\CaseHistory\Index.cshtml" />
     <Content Include="Views\Internos\Index.cshtml" />
+    <Content Include="Views\Company\SendMail.cshtml" />
+    <Content Include="Views\Company\Success.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
