english version of automatic mail "initiative zero"

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23339,6 +23339,7 @@
     <Content Include="Views\Internos\Index.cshtml" />
     <Content Include="Views\Company\SendMail.cshtml" />
     <Content Include="Views\Company\Success.cshtml" />
+    <Content Include="Views\Company\SendAutomaticMail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
