campaign zero bis & https

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23339,7 +23339,8 @@
     <Content Include="Views\Internos\Index.cshtml" />
     <Content Include="Views\Company\SendMail.cshtml" />
     <Content Include="Views\Company\Success.cshtml" />
-    <Content Include="Views\Company\SendAutomaticMail.cshtml" />
+    <Content Include="Views\Company\SendZeroCampaignMail.cshtml" />
+    <Content Include="Views\Company\SendZeroBisCampaignMail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LicenseObject\LicenseObject.csproj">
