e learning in korean

--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -23244,6 +23244,22 @@
     <Content Include="Content\eLearning\KR\View_Manipulation\1-3_General_View Manipulation_뷰조정.pdf" />
     <Content Include="Content\eLearning\KR\Visual_Bookmark\7-7_Assemblies_Visual Bookmark_즐겨찾기 .pdf" />
     <Content Include="Content\eLearning\KR\ZM_Parametric\9-6_Advanced Surface Modeling_Zone Modeling on Parametric Solid_지역모델링.pdf" />
+    <Content Include="Content\eLearning\KR\_2D_design_1\2-2_2D_2D design_2D 디자인.pdf" />
+    <Content Include="Content\eLearning\KR\_introduction_to_2D\2-1_2D_Introduction to 2D_2D 소개.pdf" />
+    <Content Include="Content\eLearning\KR\_Introduction_to_Solid_Modeling\3-2_Base Solid Modeling_Introduction to solid modeling_솔리드 모델링 소개1.pdf" />
+    <Content Include="Content\eLearning\KR\_Introduction_to_thinkdesign\1-1_General_Introduction to ThinkDesign_Thinkdesign 소개.pdf" />
+    <Content Include="Content\eLearning\KR\Advanced_features\5-3_Advanced Solid Modeling_Advanced Features_고급 피쳐.pdf" />
+    <Content Include="Content\eLearning\KR\2D_to_3D\5-4_Advanced Solid Modeling_From 2D to 3D_2D to 3D.pdf" />
+    <Content Include="Content\eLearning\KR\Define_SO\5-7_Advanced Solid Modeling_스마트오브젝트 정의.pdf" />
+    <Content Include="Content\eLearning\KR\Interactive_Modeling\5-6_Advanced Solid Modeling_Interactive solid modeling_Interactive Modeling.pdf" />
+    <Content Include="Content\eLearning\KR\Intro_Assembly\7-1_Assemblies_Introduction to Assemblies_어셈블리소개1.pdf" />
+    <Content Include="Content\eLearning\KR\Intro_Assembly\7-2_Assemblies_Introduction to Assemblies_어셈블리소개2.pdf" />
+    <Content Include="Content\eLearning\KR\Smart_Objects\5-8_Advanced Solid Modeling_스마트오브젝트.pdf" />
+    <Content Include="Content\eLearning\KR\_High_Quality_Dynamic_Rendering\10-1_Rendering_High quality dynamic rendering_고품질다이나믹렌더링.pdf" />
+    <Content Include="Content\eLearning\KR\_Solid_modeling_1\5-1_Advanced Solid Modeling_Solid modeling %28Ⅰ%29_솔리드 모델링1.pdf" />
+    <Content Include="Content\eLearning\KR\_Solid_modeling_2\5-2_Advanced Solid Modeling_Solid modeling %28Ⅱ%29_솔리드 모델링2.pdf" />
+    <Content Include="Content\eLearning\KR\_Static_Rendering_Basic_Concepts\10-2_Rendering_Static rendering basic concepts_렌더링_기본 컨셉.pdf" />
+    <Content Include="Content\eLearning\KR\_Static_Rendering_Material_Management\10-3_Rendering_Static rendering materials management_렌더링_재질과 빛.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
