--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -344,6 +344,7 @@
     <Content Include="Content\eLearning\Images\ja\WhatsNew2015.png" />
     <Content Include="Content\eLearning\Images\ja\WhatsNew2016.png" />
     <Content Include="Content\eLearning\Images\ja\ZoneModeling.png" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2017.png" />
     <Content Include="Content\Faq\answers\a_howtoinsertnewcase.htm" />
     <Content Include="Content\Faq\answers\a_initiativezero.htm" />
     <Content Include="Content\Faq\answers\a_licenseid&amp;accountstatus.htm" />
@@ -23329,6 +23330,7 @@
     <Content Include="Content\eLearning\KR\_Solid_modeling_2\5-2_Advanced Solid Modeling_Solid modeling %28Ⅱ%29_솔리드 모델링2.pdf" />
     <Content Include="Content\eLearning\KR\_Static_Rendering_Basic_Concepts\10-2_Rendering_Static rendering basic concepts_렌더링_기본 컨셉.pdf" />
     <Content Include="Content\eLearning\KR\_Static_Rendering_Material_Management\10-3_Rendering_Static rendering materials management_렌더링_재질과 빛.pdf" />
+    <Content Include="Content\eLearning\JA\WhatsNew\WhatsNew2017.pdf" />
     <None Include="Properties\PublishProfiles\DPTAS1.pubxml" />
     <None Include="Properties\PublishProfiles\test.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
