--- a/DPTnew/DPTnew/DPTnew.csproj
+++ b/DPTnew/DPTnew/DPTnew.csproj
@@ -375,6 +375,13 @@
     <Content Include="Content\Faq\img\1.4_Inserting_cases.png" />
     <Content Include="Content\Faq\img\1.5_Inserting_cases.png" />
     <Content Include="Content\Faq\img\1.6_Inserting_cases.png" />
+    <Content Include="Content\Faq\img\1.C2V_dongle.png" />
+    <Content Include="Content\Faq\img\1.Instructions_v2c.png" />
+    <Content Include="Content\Faq\img\2.C2V_dongle.png" />
+    <Content Include="Content\Faq\img\2.Instructions_v2c.png" />
+    <Content Include="Content\Faq\img\3.Instructions_v2c.png" />
+    <Content Include="Content\Faq\img\4.Instructions_v2c.png" />
+    <Content Include="Content\Faq\img\5.Instructions_v2c.png" />
     <Content Include="Content\Faq\img\ExportDPT3Care_1_old.png" />
     <Content Include="Content\Faq\img\ExportDPT3Care_2_old.png" />
     <Content Include="Content\Faq\img\ExportDPT3Care_3_old.png" />
@@ -2169,11 +2176,6 @@
     <Content Include="Content\Faq\img\Floating2015_no_dongle_3.jpg" />
     <Content Include="Content\Faq\img\Floating2015_VPN.jpg" />
     <Content Include="Content\Faq\img\Floating_Server_1.png" />
-    <Content Include="Content\Faq\img\Istruzioni_V2C_1.png" />
-    <Content Include="Content\Faq\img\Istruzioni_V2C_2.png" />
-    <Content Include="Content\Faq\img\Istruzioni_V2C_3.png" />
-    <Content Include="Content\Faq\img\Istruzioni_V2C_4.png" />
-    <Content Include="Content\Faq\img\Istruzioni_V2C_5.png" />
     <Content Include="Content\Faq\img\NoMore.gif" />
     <Content Include="Content\Faq\img\OverviewTDSuite.png" />
     <Content Include="Content\Faq\img\PART_solutions_error.jpg" />
